// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CARD_STYLES > matches snapshot 1`] = `
"
  :host { display: block; }

  ha-card {
    padding: 4px 2px;
    box-sizing: border-box;
    font-family: var(--paper-font-body1_-_font-family, sans-serif);
    color: var(--secondary-text-color, darkgray);
    font-size: 13px;
    overflow: hidden;
  }

  .stock-header, .stock-row {
    display: grid;
    grid-template-columns: 1fr 50px 50px 50px 50px 55px 50px;
    grid-template-rows: 1fr;
    align-items: stretch;
    line-height: 1;
  }

  .stock-header {
    color: var(--secondary-text-color, gray);
    border-bottom: 1px solid rgba(255,255,255,0.08);
    padding: 2px 0;
  }

  .stock-row {
    box-shadow: inset 0 -1px 0 rgba(255,255,255,0.04);
    overflow: hidden;
  }

  .col-name {
    padding-left: 2px;
    letter-spacing: 0.05em;
    font-weight: bold;
    overflow: hidden;
    display: flex;
    align-items: center;
  }

  .col-prepost, .col-1d, .col-50d, .col-200d, .col-data, .col-price {
    padding: 0 2px;
    font-weight: bold;
    white-space: nowrap;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  .stock-header .col-prepost,
  .stock-header .col-1d,
  .stock-header .col-50d,
  .stock-header .col-200d,
  .stock-header .col-data,
  .stock-header .col-price {
    font-weight: normal;
  }

  .col-price {
    padding: 0 1px;
  }
"
`;

exports[`stockRowHtml per market state > POST 1`] = `
"<!----><div class="stock-row">
    <div class="col-name"><!--?-->Apple</div>
    <div class="col-prepost" style="color:indianred;background-color:palevioletred;"><!--?-->-0.50</div>
    <div class="col-1d" style="color:seagreen;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:palevioletred;"><!--?-->174.0</div>
  </div>"
`;

exports[`stockRowHtml per market state > POSTPOST 1`] = `
"<!----><div class="stock-row">
    <div class="col-name"><!--?-->Apple</div>
    <div class="col-prepost" style="color:indianred;background-color:mediumpurple;"><!--?-->-0.50</div>
    <div class="col-1d" style="color:seagreen;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:mediumpurple;"><!--?-->174.0</div>
  </div>"
`;

exports[`stockRowHtml per market state > PRE 1`] = `
"<!----><div class="stock-row">
    <div class="col-name"><!--?-->Apple</div>
    <div class="col-prepost" style="color:seagreen;background-color:khaki;"><!--?-->+0.80</div>
    <div class="col-1d" style="color:seagreen;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:khaki;"><!--?-->178.0</div>
  </div>"
`;

exports[`stockRowHtml per market state > PRE with colors override 1`] = `
"<!----><div class="stock-row">
    <div class="col-name"><!--?-->Apple</div>
    <div class="col-prepost" style="color:seagreen;background-color:#d4af37;"><!--?-->+0.80</div>
    <div class="col-1d" style="color:seagreen;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:#d4af37;"><!--?-->178.0</div>
  </div>"
`;

exports[`stockRowHtml per market state > PREPRE 1`] = `
"<!----><div class="stock-row">
    <div class="col-name"><!--?-->Apple</div>
    <div class="col-prepost" style="color:seagreen;background-color:lightblue;"><!--?-->+0.80</div>
    <div class="col-1d" style="color:seagreen;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:lightblue;"><!--?-->178.0</div>
  </div>"
`;

exports[`stockRowHtml per market state > REGULAR 1`] = `
"<!----><div class="stock-row">
    <div class="col-name" style="color:seagreen;"><!--?-->Apple</div>
    <div class="col-prepost" style="color:gray;"><!--?--></div>
    <div class="col-1d" style="color:seagreen;background-color:lightgray;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:var(--primary-text-color);"><!--?-->175.5</div>
  </div>"
`;

exports[`stockRowHtml per market state > REGULAR with mark 1`] = `
"<!----><div class="stock-row" style="background-color:gold;">
    <div class="col-name" style="color:seagreen;"><!--?-->Apple</div>
    <div class="col-prepost" style="color:gray;"><!--?--></div>
    <div class="col-1d" style="color:seagreen;background-color:lightgray;"><!--?-->+2.50</div>
    <div class="col-50d" style="color:seagreen;"><!--?-->+5.0</div>
    <div class="col-200d" style="color:indianred;"><!--?-->-3.0</div>
    <div class="col-data"><!--?--><span style="color:seagreen;"><!--?-->30.0<!--?-->X</span></div>
    <div class="col-price" style="color:var(--primary-text-color);"><!--?-->175.5</div>
  </div>"
`;

exports[`stockRowHtml per market state > UNKNOWN (null attrs) 1`] = `
"<!----><div class="stock-row">
    <div class="col-name"><!--?-->Apple</div>
    <div class="col-prepost" style="color:gray;"><!--?--></div>
    <div class="col-1d" style="color:gray;"><!--?-->-</div>
    <div class="col-50d" style="color:gray;"><!--?-->-</div>
    <div class="col-200d" style="color:gray;"><!--?-->-</div>
    <div class="col-data"><!--?--><span style="color:var(--secondary-text-color, gray);">-</span></div>
    <div class="col-price" style="color:var(--secondary-text-color);"><!--?-->-</div>
  </div>"
`;
